mobile intro wrapping fix attempt

--- a/css/site.scss
+++ b/css/site.scss
@@ -80,10 +80,9 @@ svg#sprites {
 		}
 		h1 {
 			margin: 0;
-			display: flex;
-			flex-wrap: nowrap;
 			justify-self: start;
 			align-self: center;
+			break-inside: avoid;
 		}
 		p {
 			grid-row: 2 / 3;
